app/globals.css
/* Import Google Fonts */
@import url('https://fonts.googleapis.com/css2?family=Noto+Sans:ital,wght@0,100..900;1,100..900&family=Teko:wght@300..700&display=swap');

@import "tailwindcss";

:root {
  --background: var(--color-gray-100);;
  --foreground: #171717;
}

@theme inline {
  --color-background: var(--background);
  --color-foreground: var(--foreground);
  --font-sans: 'Noto Sans', Helvetica, sans-serif;
  --font-teko: 'Teko';
  --font-mono: var(--font-geist-mono);
  --color-white: var(--color-gray-50);
  --color-black: var(--color-gray-950);
  --color-primary: var(--color-blue-500);
  --color-primary-dark: var(--color-blue-800);
  --color-primary-light: var(--color-blue-200);;
  --color-secondary: var(--color-amber-500);
  --color-neutral: var(--color-gray-500);
  --color-neutral-dark: var(--color-gray-800);
  --color-neutral-light: var(--color-gray-200);
  --color-warning: var(--color-red-500);
  --color-hs-completed: var(--color-green-700);
  --color-hs-failed: var(--color-red-700);
  --color-hs-pending: var(--color-amber-500);
}

@media (prefers-color-scheme: dark) {
  :root {
    .dark {
      --background: #121212;
      --foreground: #e0e0e0;
      --color-white: var(--color-gray-950);
      --color-black: var(--color-gray-50);
      --color-primary: var(--color-blue-500);
      --color-primary-dark: var(--color-blue-800);
      --color-primary-light: var(--color-blue-200);;
      --color-secondary: var(--color-amber-500);
      --color-neutral: var(--color-gray-500);
      --color-neutral-dark: var(--color-gray-800);
      --color-neutral-light: var(--color-gray-200);
      --color-warning: var(--color-red-500);
      --color-hs-completed: var(--color-green-700);
      --color-hs-failed: var(--color-red-700);
      --color-hs-pending: var(--color-amber-500);
    }
  }
}

body {
  background: var(--background);
  color: var(--foreground);
  font-family: var(--font-sans);
}

